--- a/home.html
+++ b/home.html
@@ -14,14 +14,10 @@
             width: 100%; /* Make the navigation bar full width on small screens */
         }
         /* You may need to adjust the styles based on your specific design and preferences */
-        body.dark-mode {
-    background-color: #1a202c; /* Set the dark mode background color */
-    color: #ffffff; /* Set the dark mode text color */
-  }
     }
     </style>
 </head>
-<body class="dark-mode" class="bg-gradient-to-r from-violet-50 via-violet-50 to-violet-50">
+<body class="bg-gradient-to-r from-violet-50 via-violet-50 to-violet-50">
     <!-- navigation bar -->
     <nav id="nav" class="shadow-lg fixed top-0 z-10 bg-white lg:w-full sm:h-44 ">
         <div class="container flex justify-between  py-20">
@@ -31,18 +27,19 @@
             <div class=" hidden lg:flex sm:flex-row space-x-40 pl-52 text-4xl font-bold ">
                 <a href="#home" class="hover:-translate-x-5  hover: duration-300 text-purple-600 
                  hover:text-purple-800 "><i class="fa fa-home" aria-hidden="true"></i> Home</a>
-                <a href="#skills" class="hover:-translate-x-5    hover: duration-300 hover:text-purple-800"><i class="fa fa-bars" aria-hidden="true"></i> Services</a>
+                <a href="#skills" class="hover:-translate-x-5    hover: duration-300 hover:text-purple-800"><i class="fa fa-bars" aria-hidden="true"></i> Skills</a>
                 <a href="#Portfolio" class="hover:-translate-x-5  hover: duration-300 hover:text-purple-800"><i class="fa fa-briefcase" aria-hidden="true"></i> Portfolio</a>
                 <a href="#about" class="hover:-translate-x-5  hover: duration-300 hover:text-purple-800"><i class="fa fa-user-circle" aria-hidden="true"></i> About</a>
                 <a href="#contact" class="hover:-translate-x-5  hover: duration-300 hover:text-purple-800"><i class="fa fa-phone" aria-hidden="true"></i> Contact</a>
-                <button class="text-sm bg-purple-500 rounded-2xl m-6" onclick="changeBackgroundColor()">DARK MODE</button>
+
+
             </div>
         </div>
     </nav>
 
-
     <!-- content -->
 <div id="home" class="container flex flex-col lg:flex-row items-center lg:items-start mt-56 ml-5  lg:pt-56 gap-72">
+    
     <!-- Left Side -->
     <div class="text-center lg:text-left lg:w-1/2 lg:ml-20">
         <div class="pt-4 lg:pt-0 justify-between space-y-4 lg:space-y-10 ">
@@ -227,7 +224,7 @@
             <h1 class="font-bold text-white pt-20">James Kabogo</h1>
             <div class="lg:flex sm:flex-row justify-center text-2xl space-x-10 pt-20 lg:ml-20 sm:text-center text-gray-400">
                     <a href="#home">Home</a>
-                    <a href="#skills">Services</a>
+                    <a href="#skills">Skills</a>
                     <a href="#Portfolio">Portfolio</a>
                     <a href="#about">About</a>
                     <a href="#contact">Contact</a>
@@ -252,22 +249,7 @@
             navLinks.classList.toggle('hidden');
         });
     });
-</script> --> 
- <script>
-    function changeBackgroundColor() {
-   var body = document.body;
-
-        // Check if the body has a dark class
-        var isDarkMode = body.classList.contains("dark-mode");
-
-        // Toggle between light and dark mode
-        if (isDarkMode) {
-            body.classList.remove("dark-mode");
-        } else {
-            body.classList.add("dark-mode");
-        }
-    };
-    changeBackgroundColor();
-</script>
+</script> -->
+<script src="main.js"></script>
 </body>
 </html>
