--- a/home.html
+++ b/home.html
@@ -15,6 +15,43 @@
         }
         /* You may need to adjust the styles based on your specific design and preferences */
     }
+    /* Add your existing styles here */
+
+.navbar-mobile {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#navToggle {
+    font-size: 3rem;
+    background-color: none;
+    border: none;
+    cursor: pointer;
+}
+
+.mobile-links {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 10px;
+    width: 100%;
+}
+
+.mobile-links a {
+    padding: 2px;
+    text-decoration: none;
+    color: whitesmoke;
+    font-weight: 900;
+    text-align: center;
+}
+
+.mobile-links a:hover {
+    background-color: rgb(168, 94, 241);
+}
+
     </style>
 </head>
 <body class="bg-gradient-to-r from-violet-50 via-violet-50 to-violet-50">
@@ -24,7 +61,7 @@
             <h1 class="pl-20 font-bold lg:text-5xl sm:text-2xl sm:text-left"><i class="fa fa-user" aria-hidden="true"></i> <span class="text-red-700">Kabz</span> Ngarang.</h1>
             <!-- links -->
 
-            <div class=" hidden lg:flex sm:flex-row space-x-40 pl-52 text-4xl font-bold ">
+            <div class="navbar hidden lg:flex sm:flex-row space-x-40 pl-52 text-4xl font-bold ">
                 <a href="#home" class="hover:-translate-x-5  hover: duration-300 text-purple-600 
                  hover:text-purple-800 "><i class="fa fa-home" aria-hidden="true"></i> Home</a>
                 <a href="#skills" class="hover:-translate-x-5    hover: duration-300 hover:text-purple-800"><i class="fa fa-bars" aria-hidden="true"></i> Skills</a>
@@ -32,9 +69,22 @@
                 <a href="#about" class="hover:-translate-x-5  hover: duration-300 hover:text-purple-800"><i class="fa fa-user-circle" aria-hidden="true"></i> About</a>
                 <a href="#contact" class="hover:-translate-x-5  hover: duration-300 hover:text-purple-800"><i class="fa fa-phone" aria-hidden="true"></i> Contact</a>
 
-
+            </div>
+            
+            <div class="navbar-mobile lg:hidden sm:hidden text-3xl font-extrabold ">
+                <button class="text-blue-700" id="navToggle"><i class="fa fa-bars" aria-hidden="true"></i></button>
+                <!-- container element -->
+                <div class="mobile-links hidden bg-purple-600 " >
+                    <button class="bg-transparent" id="navClose"> <i><i class="fa fa-close" aria-hidden="true"></i></i></button>
+                    <a href="#home">Home</a>
+                    <a href="#skills">Skills</a>
+                    <a href="#Portfolio">Portfolio</a>
+                    <a href="#about">About</a>
+                    <a href="#contact">Contact</a>
+                </div>
             </div>
         </div>
+        
     </nav>
 
     <!-- content -->
