moved the nav button slightly to the left

--- a/home.html
+++ b/home.html
@@ -52,7 +52,7 @@
     background-color: rgb(168, 94, 241);
 }
 .navbar-mobile button{
-    margin-left: 10px;
+    margin-right: 10px ;
 }
 
 .active {
