fixed height of the nav bar

--- a/home.html
+++ b/home.html
@@ -63,9 +63,9 @@
 </head>
 <body class=" justify-center">
     <!-- navigation bar -->
-    <nav id="nav" class="shadow-lg fixed top-0 z-20 bg-white lg:w-full  ">
-        <div class="container flex justify-between  py-20">
-            <h1 class="pl-10 font-bold text-2xl lg:text-6xl  sm:text-left"><i class="fa fa-user" aria-hidden="true"></i> <span class="text-red-700">Kabz</span> Ngarang.</h1>
+    <nav id="nav" class="shadow-lg fixed top-0 z-20 bg-white h-24 md:h-28 lg:h-40 lg:w-full  ">
+        <div class="container flex justify-between  py-6 md:py-9 lg:py-12">
+            <h1 class="pl-10 font-bold text-2xl lg:text-5xl sm:text-left"><i class="fa fa-user" aria-hidden="true"></i> <span class="text-red-700">Kabz</span> Ngarang.</h1>
 
             <div class="navbar hidden lg:flex md:flex-row sm:flex-row space-x-32 text-4xl font-bold">
                 <a href="#home" class="nav-link"><i class="fa fa-home" aria-hidden="true"></i> Home</a>
