changed image and also height for diff devices

--- a/home.html
+++ b/home.html
@@ -63,7 +63,7 @@
 </head>
 <body class=" justify-center">
     <!-- navigation bar -->
-    <nav id="nav" class="shadow-lg fixed top-0 z-20 bg-white h-24 md:h-28 lg:h-40 lg:w-full  ">
+    <nav id="nav" class="shadow-lg fixed top-0 z-20 bg-white h-24 md:h-28 lg:h-36 lg:w-full  ">
         <div class="container flex justify-between  py-6 md:py-9 lg:py-12">
             <h1 class="pl-10 font-bold text-2xl lg:text-5xl sm:text-left"><i class="fa fa-user" aria-hidden="true"></i> <span class="text-red-700">Kabz</span> Ngarang.</h1>
 
@@ -96,10 +96,10 @@
     </nav>
 
     <!-- content -->
-<div id="home" class="container flex flex-col lg:flex-row items-center lg:items-start mt-60 ml-8 lg:ml-0  gap-20">
+<div id="home" class="container flex flex-col lg:flex-row items-center lg:items-start mt-40 ml-8 lg:ml-0  gap-20">
     
     <!-- Left Side -->
-    <div class="text-center lg:text-left sm:ml-10  ">
+    <div class="text-center lg:text-left items-center justify-center lg:ml-5  ">
         <div class="pt-4 lg:pt-0 justify-between space-y-4 lg:space-y-5 ">
             <h4 class="text-gray-900 font-bold text-3xl lg:text-4xl">Hello, It's Me</h4>
             <h1 class="text-gray-800 font-extrabold text-5xl lg:text-7xl"><span class="text-red-700">Kabz</span> Ngarang</h1>
@@ -126,8 +126,8 @@
     </div>
 
     <!-- Right Side (Image) -->
-    <div class="bg-gradient-to-r from-indigo-900 via-violet-600 to-indigo-900 lg:p-14  rounded-full">
-        <img src="img/new bg.png" alt="" class="animate-SlideRight w-96  mx-auto lg:mx-0">
+    <div class="lg:p-14  rounded-full">
+        <img src="img/WhatsApp Image 2024-02-09 at 02.30.31_812083c0.jpg" alt="" class="rounded-3xl shadow-lg transform transition-all hover:-translate-y-2 duration-300 hover:shadow-3xl hover:shadow-black  hover:animate-pulse w-96  mx-auto lg:mx-0">
     </div>
 </div>
 
