--- a/home.html
+++ b/home.html
@@ -96,7 +96,7 @@
     </nav>
 
     <!-- content -->
-<div id="home" class="container flex flex-col lg:flex-row items-center lg:items-start mt-40 ml-8 lg:ml-0  gap-20">
+<div id="home" class="container flex flex-col lg:flex-row items-center lg:items-start mt-40 ml-0 lg:ml-0  gap-20">
     
     <!-- Left Side -->
     <div class="text-center lg:text-left items-center justify-center lg:ml-5  ">
@@ -126,39 +126,39 @@
     </div>
 
     <!-- Right Side (Image) -->
-    <div class="lg:p-14  rounded-full">
-        <img src="img/WhatsApp Image 2024-02-09 at 02.30.31_812083c0.jpg" alt="" class="rounded-3xl shadow-lg transform transition-all hover:-translate-y-2 duration-300 hover:shadow-3xl hover:shadow-black  hover:animate-pulse w-96  mx-auto lg:mx-0">
+    <div class="p-0 lg:p-14  rounded-full">
+        <img src="img/WhatsApp Image 2024-02-09 at 02.30.31_812083c0.jpg" alt="" class="rounded-3xl shadow-lg transform transition-all hover:translate-y-14 duration-300 hover:shadow-3xl hover:shadow-black  hover:animate-pulse w-60 lg:w-96  mx-auto lg:mx-0">
     </div>
 </div>
 
 <!-- Web Development -->
 <h1 class="mb-20 mt-10 text-4xl lg:text-7xl md:text-5xl text-center font-extrabold "> My Skills</h1>
-  <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mt-8 justify-center items-center ml-10 md:ml-0 lg:ml-0  ">
+  <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mt-8 justify-center items-center ml-0 md:ml-0 lg:ml-0  ">
 
     <div class="bg-white p-6 rounded-lg transform transition-all hover:-translate-y-2 duration-300 shadow-lg hover:shadow-2xl">
-        <img class="w-56 mx-auto" src="img/icons8-html-96.png" alt="">
+        <img class="w-20 lg:w-40 mx-auto" src="img/icons8-html-96.png" alt="">
         <h2 class="text-center font-extrabold text-xl lg:text-3xl font-bold mt-4">HTML</h2>
     </div>
     <div class="bg-white p-6 rounded-lg transform transition-all hover:-translate-y-2 duration-300 shadow-lg hover:shadow-2xl">
-        <img class="w-56 mx-auto" src="img/icons8-css-96.png" alt="">
+        <img class="w-20 lg:w-40 mx-auto" src="img/icons8-css-96.png" alt="">
         <h2 class="text-center font-extrabold text-xl lg:text-3xl font-bold mt-4">CSS</h2>
     </div>
     <div class="bg-white p-6 rounded-lg transform transition-all hover:-translate-y-2 duration-300 shadow-lg hover:shadow-2xl">
-        <img class="w-56 mx-auto" src="img/icons8-javascript-96.png" alt="">
+        <img class="w-20 lg:w-40 mx-auto" src="img/icons8-javascript-96.png" alt="">
         <h2 class="text-center font-extrabold text-xl  lg:text-3xl font-bold mt-4">Javascript</h2>
     </div>
     <div class="bg-white p-6 rounded-lg transform transition-all hover:translate-y-2 duration-300 shadow-lg hover:shadow-2xl">
-        <img class="w-56 mx-auto" src="img/icons8-bootstrap-96.png" alt="">
+        <img class="w-20 lg:w-40 mx-auto" src="img/icons8-bootstrap-96.png" alt="">
         <h2 class="text-center font-extrabold text-xl  lg:text-3xl font-bold mt-4">BootStrap</h2>
     </div>
     <div
         class="bg-white p-6 rounded-lg transform transition-all hover:translate-y-2 duration-300 shadow-lg hover:shadow-2xl">
-        <img class="w-56 mx-auto" src="img/icons8-tailwind-css-96.png" alt="">
+        <img class="w-20 lg:w-40  mx-auto" src="img/icons8-tailwind-css-96.png" alt="">
         <h2 class="text-center font-extrabold text-xl lg:text-3xl font-bold mt-4">TailWind CSS</h2>
     </div>
     <div
         class="bg-white p-6 rounded-lg transform transition-all hover:translate-y-2 duration-300 shadow-lg hover:shadow-2xl">
-        <img class="w-56 mx-auto" src="img/icons8-react-96.png" alt="">
+        <img class="w-20 lg:w-40 mx-auto" src="img/icons8-react-96.png" alt="">
         <h2 class="text-center font-extrabold text-xl lg:text-3xl font-bold mt-4">React Js</h2>
     </div>
     
@@ -167,11 +167,11 @@
 
     <!-- portfolio -->
   
-    <div id="Portfolio" class="justify-center items-center mt-60  text-center ml-10">
+    <div id="Portfolio" class="justify-center items-center mt-60  text-center">
             <h3 class="text-purple-500 text-5xl font-bold">Portfolio</h3>
             <h1 class="text-gray-800 text-6xl  font-bold ">Featured Projects</h1>
         <div class="flex flex-wrap justify-center items-center gap-10 rounded-xl  mt-28 ml-auto mr-auto 
-        ml-14 md:ml-16 lg:ml-30">
+        ml-0 md:ml-16 lg:ml-30">
             <div class=" shadow-red-600 "><a href="clotheshop/index.html"><video class="rounded-2xl shadow-lg shadow-red-700 transform transition-all hover:-translate-y-2 duration-300 shadow-lg hover:shadow-2xl"
                         src="video/JKNSHOP - Google Chrome 2023-11-23 17-20-19.mp4" autoplay muted height="600px" width="600px">
                     </video></a>
@@ -209,7 +209,7 @@
 
     <!-- about -->
    
-<div id="about" class="mt-16 ml-10 md:ml-0 lg:ml-0   justify-center items-center">
+<div id="about" class="mt-16 ml-0 md:ml-0 lg:ml-0   justify-center items-center">
     <h1 class="text-6xl font-serif text-center font-extrabold ">ABOUT ME</h1>
     <div
         class="container flex flex-col   md:grid-cols-2 lg:grid-cols-1 mx-auto p-5 mt-28 bg-white shadow-2xl shadow-purple-400 rounded-md   ml-auto">
@@ -232,14 +232,14 @@
 
     <!-- contact page -->
 <div id="contact" class="mt-40">
-    <div class="justify-center text-center ml-5 mr-auto mb-32">
+    <div class="justify-center text-center ml-0 mr-auto mb-32">
         <h1 class="text-4xl md:text-5xl lg:text-6xl text-purple-900 font-extrabold">Let's Talk</h1>
         <h2 class="text-3xl md:text-5xl lg:text-6xl text-indigo-950 font-bold">Have a Project Idea?</h2>
         <h2 class="text-3xl md:text-5xl lg:text-6xl text-indigo-950 font-bold">Feel Free to Contact</h2>
     </div>
 
     <!-- info section -->
-    <div class="flex flex-wrap justify-center items-center ml-10 lg:ml-auto lg:mr-auto">
+    <div class="flex flex-wrap justify-center items-center ml-0 lg:ml-auto lg:mr-auto">
         <div style="width: 400px;"
             class="bg-gradient-to-r from-violet-500 via-violet-500 to-violet-500 text-purple-100 rounded-lg shadow-lg shadow-purple-800 space-y-4 text-center justify-center lg:mr-3 p-5">
             <i class="fa fa-phone text-4xl sm:text-6xl" aria-hidden="true"></i>
