--- a/home.html
+++ b/home.html
@@ -128,7 +128,7 @@
             <button class="btn bg-indigo-600 text-white p-4 lg:p-6 rounded-3xl">Hire Me</button>
 
             <!-- social links -->
-            <div class="flex justify-center text-center space-x-4 mt-4">
+            <div class="flex justify-center lg:justify-start space-x-4 mt-4">
                 <h1 class="text-2xl lg:text-5xl  font-bold">Join Me</h1>
                 <!-- github -->
                 <a href="https://github.com/kabzngarang254"><i class="fa fa-github text-2xl lg:text-5xl hover:text-indigo-900"
