--- a/home.html
+++ b/home.html
@@ -122,7 +122,7 @@
             <h1 class="text-gray-800 font-extrabold text-5xl lg:text-7xl"><span class="text-indigo-700">James</span> Kabogo</h1>
             <h3 class="text-gray-800 font-bold text-4xl lg:text-10xl">And I'm a Web Developer|</h3>
             <p class="text-gray-900 font-medium text-xl lg:text-5xl ">I specialize in developing and building responsive
-                websites that are not <br> only beautiful but also enhance seamless user experience</p>
+                websites <br> that are not only beautiful but also enhance seamless user experience</p>
 
             <!-- button -->
             <button class="btn bg-indigo-600 text-white p-4 lg:p-6 rounded-3xl">Hire Me</button>
