--- a/home.html
+++ b/home.html
@@ -319,7 +319,7 @@
         <div class="flex flex-col lg:flex-row justify-center lg:space-x-10 pt-10 lg:pt-20">
             <a href="#home" class="text-2xl lg:text-4xl text-gray-400 hover:text-indigo-900">Home</a>
             <a href="#skills" class="text-2xl lg:text-4xl text-gray-400 hover:text-indigo-900">Skills</a>
-            <a href="#portfolio" class="text-2xl lg:text-4xl text-gray-400 hover:text-indigo-900">Portfolio</a>
+            <a href="#Portfolio" class="text-2xl lg:text-4xl text-gray-400 hover:text-indigo-900">Portfolio</a>
             <a href="#about" class="text-2xl lg:text-4xl text-gray-400 hover:text-indigo-900">About</a>
             <a href="#contact" class="text-2xl lg:text-4xl text-gray-400 hover:text-indigo-900">Contact</a>
         </div>
