--- a/home.html
+++ b/home.html
@@ -176,7 +176,7 @@
     <div
         class="bg-white p-6 rounded-lg transform transition-all hover:translate-y-2 duration-300 shadow-lg hover:shadow-2xl">
         <img class="w-20 lg:w-40 mx-auto" src="img/icons8-react-96.png" alt="">
-        <h2 class="text-center font-extrabold text-xl lg:text-3xl font-bold mt-4">React Js</h2>
+        <h2 class="text-center font-extrabold text-xl lg:text-3xl font-bold mt-4">React.Js</h2>
     </div>
     
 
