--- a/home.html
+++ b/home.html
@@ -9,14 +9,14 @@
     <link rel="shortcut icon" href="img/WhatsApp Image 2024-02-09 at 02.30.31_812083c0.jpg" class="rounded-full" type="image/x-icon">
     <title>Document</title>
     <style>
+        /* for tablet */
            @media (max-width: 800px) {
-        /* Apply styles only when the screen width is 768 pixels or less */
         #nav{
-            width: 100%; /* Make the navigation bar full width on small screens */
+            width: 100%; 
         }
-        /* You may need to adjust the styles based on your specific design and preferences */
+      
     }
-    /* Add your existing styles here */
+    
 
 .navbar-mobile {
     display: flex;
@@ -59,7 +59,7 @@
 }
 
 .active {
-    color: rgb(92, 3, 193); /* Change this to your desired active link color */
+    color: rgb(92, 3, 193); 
 }
 
     </style>
