--- a/home.html
+++ b/home.html
@@ -125,7 +125,7 @@
                 websites <br> that are not only beautiful but also enhance seamless user experience</p>
 
             <!-- button -->
-            <button class="btn bg-indigo-600 text-white p-4 lg:p-6 rounded-3xl">Hire Me</button>
+            <a href="#contact"><button class="btn bg-indigo-600 text-white p-4 lg:p-6 rounded-3xl">Hire Me</button></a>
 
             <!-- social links -->
             <div class="flex justify-center lg:justify-start space-x-4 mt-4">
