--- a/home.html
+++ b/home.html
@@ -172,52 +172,52 @@
         <div
             class="bg-white p-6 rounded-lg transform transition-all hover:-translate-y-2 duration-300 shadow-lg hover:shadow-2xl">
             <img class="w-20 lg:w-40 mx-auto" src="img/icons8-html-96.png" alt="">
-            <h2 class="text-center font-extrabold text-xl lg:text-3xl font-bold mt-4">HTML</h2>
+            <h2 class="text-center font-extrabold text-xl lg:text-3xl  mt-4">HTML</h2>
         </div>
         <div
             class="bg-white p-6 rounded-lg transform transition-all hover:-translate-y-2 duration-300 shadow-lg hover:shadow-2xl">
             <img class="w-20 lg:w-40 mx-auto" src="img/icons8-css-96.png" alt="">
-            <h2 class="text-center font-extrabold text-xl lg:text-3xl font-bold mt-4">CSS</h2>
+            <h2 class="text-center font-extrabold text-xl lg:text-3xl  mt-4">CSS</h2>
         </div>
         <div
             class="bg-white p-6 rounded-lg transform transition-all hover:-translate-y-2 duration-300 shadow-lg hover:shadow-2xl">
             <img class="w-20 lg:w-40 mx-auto" src="img/icons8-javascript-96.png" alt="">
-            <h2 class="text-center font-extrabold text-xl  lg:text-3xl font-bold mt-4">Javascript</h2>
+            <h2 class="text-center font-extrabold text-xl  lg:text-3xl  mt-4">Javascript</h2>
         </div>
         <div
             class="bg-white p-6 rounded-lg transform transition-all hover:translate-y-2 duration-300 shadow-lg hover:shadow-2xl">
             <img class="w-20 lg:w-40 mx-auto" src="img/icons8-bootstrap-96.png" alt="">
-            <h2 class="text-center font-extrabold text-xl  lg:text-3xl font-bold mt-4">BootStrap</h2>
+            <h2 class="text-center font-extrabold text-xl  lg:text-3xl  mt-4">BootStrap</h2>
         </div>
         <div
             class="bg-white p-6 rounded-lg transform transition-all hover:translate-y-2 duration-300 shadow-lg hover:shadow-2xl">
             <img class="w-20 lg:w-40  mx-auto" src="img/icons8-tailwind-css-96.png" alt="">
-            <h2 class="text-center font-extrabold text-xl lg:text-3xl font-bold mt-4">TailWind CSS </h2>
+            <h2 class="text-center font-extrabold text-xl lg:text-3xl  mt-4">TailWind CSS </h2>
         </div>
         <div
             class="bg-white p-6 rounded-lg transform transition-all hover:translate-y-2 duration-300 shadow-lg hover:shadow-2xl">
             <img class="w-20 lg:w-40 mx-auto" src="img/icons8-react-96.png" alt="">
-            <h2 class="text-center font-extrabold text-xl lg:text-3xl font-bold mt-4">React.Js</h2>
+            <h2 class="text-center font-extrabold text-xl lg:text-3xl  mt-4">React.Js</h2>
         </div>
         <div
             class="bg-white p-6 rounded-lg transform transition-all hover:translate-y-2 duration-300 shadow-lg hover:shadow-2xl">
             <img class="w-20 lg:w-40 mx-auto" src="img/icons8-php-96.png" alt="">
-            <h2 class="text-center font-extrabold text-xl lg:text-3xl font-bold mt-4">PHP</h2>
+            <h2 class="text-center font-extrabold text-xl lg:text-3xl  mt-4">PHP</h2>
         </div>
         <div
             class="bg-white p-6 rounded-lg transform transition-all hover:translate-y-2 duration-300 shadow-lg hover:shadow-2xl">
             <img class="w-20 lg:w-40 mx-auto" src="img/laravel.svg" alt="">
-            <h2 class="text-center font-extrabold text-xl lg:text-3xl font-bold mt-4">Laravel</h2>
+            <h2 class="text-center font-extrabold text-xl lg:text-3xl  mt-4">Laravel</h2>
         </div>
         <div
             class="bg-white p-6 rounded-lg transform transition-all hover:translate-y-2 duration-300 shadow-lg hover:shadow-2xl">
             <img class="w-20 lg:w-40 mx-auto" src="img/icons8-vue-js-96.png" alt="">
-            <h2 class="text-center font-extrabold text-xl lg:text-3xl font-bold mt-4">Vue Js</h2>
+            <h2 class="text-center font-extrabold text-xl lg:text-3xl  mt-4">Vue Js</h2>
         </div>
         <div
             class="bg-white p-6 rounded-lg transform transition-all hover:translate-y-2 duration-300 shadow-lg hover:shadow-2xl">
             <img class="w-20 lg:w-40 mx-auto" src="img/icons8-node-js-96.png" alt="">
-            <h2 class="text-center font-extrabold text-xl lg:text-3xl font-bold mt-4">Node Js</h2>
+            <h2 class="text-center font-extrabold text-xl lg:text-3xl  mt-4">Node Js</h2>
         </div>
 
     </div>
